# pr2_dynamics_identification

./: CMakeLists.txt  README.md  controller_plugins.xml  di.launch  di_controller_plugin.yaml  l_shoulder_pan-raw.bag  mainpage.dox  manifest.xml  plot_analysis.py  plot_segments.py
msg/: Analysis.msg  Data.msg  Segment.msg  Start.msg
src/: di_analysis.cpp  di_controller_plugin.cpp  di_segmentation.cpp
